# mp3-manager

./: .gitignore  TAREFAS.md  package-lock.json  package.json
.claude/skills/tagwave-qa/: SKILL.md
.github/workflows/: notify-release.yml  release.yml
src/: App.tsx  helpContent.ts  index.css  main.tsx  shortcuts.ts  store.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIAssistant.tsx  CreatePlaylistModal.tsx  CuePointsModal.tsx  DeleteConfirmDialog.tsx  DjExportOverlay.tsx  DjSyncModal.tsx  DuplicatePrompt.tsx  EnrichResultModal.tsx  FilenameMetaPrompt.tsx  FilenamePrompt.tsx  FirstLaunchModal.tsx  FolderBrowser.tsx  HelpMarkers.tsx  Inspector.tsx  LibraryStats.tsx  MiniPlayer.tsx  MissingMetaPrompt.tsx  NewTracksBanner.tsx  NewTracksModal.tsx  NewTracksPlaylistOffer.tsx  OfflineBanner.tsx  Onboarding.tsx  ParenReviewPrompt.tsx  PlaylistSettingsModal.tsx  ProBanner.tsx  ProGate.tsx  ProductTour.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx  TrackTable.tsx  TrialBanner.tsx  TrialExpiredModal.tsx  TrialInfoModal.tsx  UpdateModal.tsx  VideoPlayerModal.tsx  WaveformCell.tsx
src/i18n/: en.json  es.json  index.ts  pt-BR.json
src/lib/: coverCache.ts  folderDrag.ts  globalAudio.ts  ipcQueue.ts  playlistRules.ts  structureAnalyzer.ts  waveformAnalyzer.ts  waveformCache.ts
src/services/: LicenseService.ts  SpotifyService.ts  iTunesService.ts
swift-macos/: project.yml
swift-macos/MP3Manager.xcodeproj/: project.pbxproj
(+63 files in other folders)
