[package]
name = "mp3-manager-tauri"
version = "0.5.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mp3_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "1"
lofty = "0.22"
walkdir = "2"
rayon = "1"
sha2 = "0.10"
trash = "3"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "pcm", "aiff", "flac", "wav"] }
rusqlite = { version = "0.31", features = ["bundled"] }

